--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "latest",
+    "react-intersection-observer": "^9.15.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
